<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:background="@color/lightmint">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mulai"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/style_button"
        android:text="@string/welcomebtn"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:text="@string/welcome"
        android:textColor="@color/primary_text"
        android:textSize="45sp"
        android:textStyle="bold"
        android:background="@drawable/style_welcometext"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="20dp"
        android:text="@string/welcomesub"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:background="@drawable/style_textwelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Catatan : Semua Informasi dalam aplikasi ini bersumber dari Alodokter"
        android:textColor="@color/secondary_text"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mulai" />

</androidx.constraintlayout.widget.ConstraintLayout>