<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="65dp"
                android:layout_height="2dp"
                android:background="@color/accent"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="320dp"
                android:layout_height="500dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/iconhadi"
                        app:strokeColor="@android:color/transparent"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="322dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/about_us_nama"
                        android:textColor="@color/primary_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="320dp"
                        android:layout_height="35dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/about_us_nim"
                        android:textColor="@color/primary_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/about_us_alamat"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/primary_dark"
                        android:gravity="center"
                        android:text="@string/about_us_kontak"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/about_us_instagram"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@android:color/transparent"
                        android:scaleType="centerCrop"
                        android:tint="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/about_us_gmail"
                        app:layout_constraintHorizontal_bias="0.564"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        app:layout_constraintVertical_bias="0.542"
                        app:srcCompat="@drawable/logoinstagram" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/about_us_whatsapp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@android:color/transparent"
                        android:scaleType="centerCrop"
                        android:tint="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.47"
                        app:layout_constraintStart_toEndOf="@+id/about_us_gmail"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        app:layout_constraintVertical_bias="0.542"
                        app:srcCompat="@drawable/logowhatsapp" />

                    <ImageButton
                        android:id="@+id/about_us_gmail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@android:color/transparent"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        app:srcCompat="@drawable/logogmail"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>